--- a/public/index.html
+++ b/public/index.html
@@ -32,8 +32,10 @@
         function handleCredentialResponse(response) {
             // Google Token : ID_TOKEN
         //    console.log('id_token', response.credential);
+            // const url = (window.location.hostname.includes('localhost'))? 'http://localhost:8080/api/auth/google' : 'https://curso-node-restserver-production-4116.up.railway.app/api/auth/google'
+            const url = `${window.location.origin}/api/auth/google`;
             const body = {id_token: response.credential}
-            fetch('http://localhost:8080/api/auth/google', {
+            fetch(url, {
                 method: 'POST',
                 headers: {
                     'Content-Type':'application/json'
